...
          Row(
            children: [
              Expanded(
                child: OutlinedButton.icon(
                  onPressed: () => viewModel.toggleEditMode(),
                  icon: const Icon(Icons.close),
                  label: Text('general.button.cancel'.tr()),
                ),
              ),
              ProjectSizedBox.widthNormal,
              Expanded(
                child: ElevatedButton.icon(
                  onPressed: () => viewModel.updateUserFromControllers(),
                  icon: const Icon(Icons.save_rounded),
                  label: Text('general.button.save'.tr()),
                ),
              ),
            ],
          ),
        ],
      ),
...
